// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<div>
  <div
    arialabelledby="fake-id"
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
    data-testid="test"
    floatinglabeltext="This is a test textfield component"
  >
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1vg8b0p-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        aria-labelledby="fake-id"
        class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
        data-analyticsid="test-input"
        data-testid="test-input"
        id="test-input"
        name="testField"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<div>
  <div
    arialabelledby="fake-id"
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root requiredField css-wb57ya-MuiFormControl-root-MuiTextField-root"
    data-testid="test"
    floatinglabeltext="This is a test textfield component"
  >
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1vg8b0p-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        aria-labelledby="fake-id"
        class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
        data-analyticsid="test-input"
        data-testid="test-input"
        id="test-input"
        name="testField"
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component with shrink:true 1`] = `
<div>
  <div
    arialabelledby="fake-id"
    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
    data-testid="test"
    floatinglabelfixed="true"
    floatinglabeltext="This is a test textfield component"
  >
    <label
      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-standard css-5afocb-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      data-testid="test-label"
      for="test-input"
      id="test-label"
    >
      test
    </label>
    <div
      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-1vg8b0p-MuiInputBase-root-MuiInput-root"
    >
      <input
        aria-invalid="false"
        aria-label="test"
        aria-labelledby="fake-id"
        class="MuiInputBase-input MuiInput-input css-1x51dt5-MuiInputBase-input-MuiInput-input"
        data-analyticsid="test-input"
        data-testid="test-input"
        id="test-input"
        label="test"
        name="testField"
        type="text"
      />
    </div>
  </div>
</div>
`;
